<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appPermission">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="57dp"
                android:layout_height="66dp"
                android:src="@drawable/logo_4" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:text="goSAFE"
                android:textAlignment="gravity"
                android:textColor="#fff"
                android:textSize="30sp" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_above="@+id/final_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:text="App Permissions"
                android:textColor="#BF000000"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:layout_marginBottom="20dp"
                android:paddingBottom="7dp"
                android:text="@string/permission"
                android:textColor="#BF000000"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:src="@drawable/round_bluetooth_black_18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon1"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/icon1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:text="@string/permission_1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_toRightOf="@+id/icon1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:paddingTop="0dp"
                        android:paddingBottom="7dp"
                        android:text="@string/permission_11"
                        android:textColor="#BF000000"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:src="@drawable/round_notification_important_black_18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon2"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/icon2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:text="@string/permission_2"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:paddingTop="0dp"
                        android:paddingBottom="7dp"                        android:text="@string/permission_22"
                        android:textColor="#BF000000"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:src="@drawable/round_phone_black_18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon1"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/icon1">
                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:text="@string/permission_3"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_toRightOf="@+id/icon1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:paddingTop="0dp"
                        android:paddingBottom="7dp"                        android:textAlignment="gravity"
                        android:paddingLeft="10dp"
                        android:text="@string/permission_33"
                        android:textColor="#BF000000"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/final_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:onClick="allowAccess"
        android:text="I accept"
        android:textColor="#ffffff" />

</RelativeLayout>